<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_support_header">
        <Preference
            android:key="about_support_version"
            android:title="@string/about_support_version_title"
            android:summary="@string/about_support_version_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aisleron.com/docs/version-history" />
        </Preference>
        <Preference
            android:key="about_documentation"
            android:title="@string/about_support_documentation_title"
            android:summary="@string/about_support_documentation_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/aisleron_documentation_url" />
        </Preference>
        <Preference
            android:key="about_support_report_issue"
            android:title="@string/about_support_report_issue_title"
            android:summary="@string/about_support_report_issue_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aisleron.com/docs/reporting-issues" />
        </Preference>
        <Preference
            android:key="about_support_sourcecode"
            android:title="@string/about_support_sourcecode_title"
            android:summary="@string/about_support_sourcecode_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/aisleron/aisleron" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_legal_header">
        <Preference
            android:key="about_legal_license"
            android:title="@string/about_legal_license_title"
            android:summary="@string/about_legal_license_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aisleron.com/docs/licenses-policies/aisleron-license" />
        </Preference>
        <Preference
            android:key="about_legal_privacy"
            android:title="@string/about_legal_privacy_title"
            android:summary="@string/about_legal_privacy_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aisleron.com/docs/licenses-policies/aisleron-privacy-policy" />
        </Preference>
        <Preference
            android:key="about_legal_3rdparty"
            android:title="@string/about_legal_3rdparty_title"
            android:summary="@string/about_legal_3rdparty_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://aisleron.com/docs/licenses-policies/3rd-party-licenses" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>