<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_options_header">
        <SwitchPreferenceCompat
            app:key="display_lockscreen"
            app:title="@string/show_on_lock_screen" />
        <ListPreference
            android:defaultValue="system_theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="application_theme"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/shopping_list_options_header">
        <SwitchPreferenceCompat
            app:key="hide_status_change_snack_bar"
            app:title="@string/hide_status_change_snack_bar" />
        <SwitchPreferenceCompat
            app:key="show_empty_aisles"
            app:title="@string/show_empty_aisles" />
        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/keep_screen_on"
            app:summary="@string/keep_screen_on_summary" />
        <ListPreference
            android:defaultValue="checkbox"
            android:entries="@array/tracking_method_names"
            android:entryValues="@array/tracking_method_values"
            android:key="tracking_mode"
            android:title="@string/tracking_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_restore_title">
        <Preference
            android:title="@string/backup_folder"
            app:key="backup_folder" />
        <Preference
            android:title="@string/backup_database"
            app:key="backup_database" />
        <Preference
            android:title="@string/restore_database"
            app:key="restore_database" />
    </PreferenceCategory>
</PreferenceScreen>

