<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.NavigationDrawerFragment"
    android:id="@+id/fragment_navigation_drawer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/nav_header_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar">

            <include layout="@layout/nav_header_main" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/Theme.Aisleron.NavigationDrawer"
            android:padding="0dp"
            android:id="@+id/navigation_menu_items">

            <TextView
                android:id="@+id/nav_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAppearance="?attr/textAppearanceOverline" />

            <TextView
                android:id="@+id/nav_in_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_in_stock"
                app:drawableStartCompat="@drawable/in_stock_list_24"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nav_needed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_needed"
                app:drawableStartCompat="@drawable/needed_list_24"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nav_all_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_all_items"
                app:drawableStartCompat="@drawable/all_items_list_24"
                android:textAppearance="?attr/textAppearanceListItem" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_shops"
                android:textAppearance="?attr/textAppearanceOverline" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_shop_menu_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:name="com.aisleron.ui.shopmenu.ShopMenuFragment"
                tools:layout="@layout/fragment_shop_menu_item" />

            <TextView
                android:id="@+id/nav_all_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_all_shops"
                app:drawableStartCompat="@drawable/baseline_shopping_cart_24"
                android:textAppearance="?attr/textAppearanceListItem" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/nav_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_history"
                app:drawableStartCompat="@drawable/baseline_history_24"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings"
                app:drawableStartCompat="@drawable/ic_menu_settings"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_about"
                app:drawableStartCompat="@drawable/baseline_info_24"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
