<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/text_margin"
    tools:context=".ui.shop.ShopFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name"
        android:labelFor="@id/edt_shop_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swc_shop_pinned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_shop"
        android:padding="@dimen/text_margin" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swc_shop_show_unmapped_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_unmapped_products"
        android:padding="@dimen/text_margin"
        android:checked="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/shop_loyalty_card_name"
            android:labelFor="@id/edt_shop_loyalty_card"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_shop_loyalty_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_lookup_loyalty_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/get_loyalty_card"
            android:src="@drawable/themed_add_card_24"
            style="@style/Widget.AppCompat.ActionButton" />

        <ImageButton
            android:id="@+id/btn_delete_loyalty_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/delete_loyalty_card"
            android:src="@drawable/themed_delete_24"
            style="@style/Widget.AppCompat.ActionButton" />


    </LinearLayout>

</LinearLayout>